deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: ghcr.io/pablo-sande/portfolio:main-0.0.21
        resources:
          requests:
            cpu: "250m"
          limits:
            # -- maximum amout of cpu per container (250m means 25% of 1 core)
            cpu: 500m
            # -- maximum amout of memory per container
            memory: 100Mi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: dockerconfigjson-github-com
