service.yaml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
 # Service name
 name: portfolio
spec:
 selector:
   # Selector for Pods
   app: portfolio
 ports:
   # Port Map
 - port: 80
   targetPort: 3000
   protocol: TCP
 type: LoadBalancer
